<resources>
    <string name="app_name">our project</string>
    <string name="title1">All Your</string>
    <string name="title2">Healthcare Needs</string>
    <string name="title3">in One Place</string>
    <string name="signuptitle">Sign Up</string>
    <string name="button1">Start</string>
    <string name="firstname">Name</string>
    <string name="lastname">Surname</string>
    <string name="phonenumber">Mobile number:</string>
    <string name="creatingpassword">New Password</string>
    <string name="type">Gender:</string>
    <string name="welcome">Welcome To Roshetaa</string>
    <string name="typemale">Male</string>
    <string name="typefemale">Female</string>
    <string name="button2">Sign Up</string>
    <string name="data">username:</string>
    <string name="flow">login</string>
    <string name="ww">password:</string>
    <string name="dd">Create a new account</string>
    <string name="aa">Enter the code sent:</string>
    <string name="qq">continue</string>
    <string name="appointment">Book an appointment in Clinic</string>
    <string name="calling">Book a call with a doctor</string>
    <string name="visiting">Book a home visit</string>

    <string name="money">Do you want to pay cash or visa?</string>
    <string name="cash">Cash</string>
    <string name="visa">Visa</string>
    <string name="tv_First_Name">Card Holder Name</string>
    <string name="tv_Last_Name">Last_Name</string>
    <string name="tv_phone_number"> Phone number:</string>
    <string name="tv_card_number">CVV</string>
    <string name="tv_code">CARD NUMBER</string>
    <string name="tv_date">Expiration Date</string>
    <string name="btn_confirm">confirm</string>
    <string name="tv_process">Your payment was successful</string>
    <string name="tv_process1">Thank you for your payment.We will</string>
    <string name="tv_process2">be in contact with more details shortlly</string>
    <string name="btn_back">back</string>
    <string name="advertisment">Need a doctor?</string>
    <string name="advertisment2">Book online or call us to help you</string>
    <string name="city">Your City:</string>
    <string name="diseases">have chronic diseases?</string>
    <string name="surgeries">Had surgeries before?</string>
    <string name="hisrory">Have medical history?</string>
    <string name="fees">maximum fees?</string>
    <string name="speciality">Speciality</string>
    <string name="specialityname">Write Speciality</string>
    <string name="cityname">Enter Your City</string>
    <string name="check1">Yes</string>
    <string name="check2">No</string>
    <string name="price">Write Number</string>
    <string name="button20">Supmit</string>
    <string name="address1">Write your area:</string>
    <string name="addressquestion">or access your location?</string>
    <string name="choose">choose clinic</string>
    <string name="dr">Dr/Name</string>
    <string name="bt">Appointment Booking</string>
    <string name="price2">price</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dr_name">DR \Name:</string>
    <string name="done">successfully registerd</string>
    <string name="vv">LOG OUT</string>
    <string name="exitmainpage">GO TO MAIN PAGE </string>

    <string name="confirmthepassword">confirm your password</string>
    <string name="bookingdate">Booking Date:</string>
    <string name="waitingtime">Waiting time:</string>
    <string name="confirmbutton">Confirm</string>
    <string name="payment">Go to payment</string>
    <string name="draddress">Dr address:</string>
    <string name="confirmreservation">Confirm your reservation</string>
    <string name="patientname">Patient Name:</string>
    <string name="servicetype">Service type</string>
    <string name="phonecall">Phone call</string>
    <string name="selectservice">Select service type</string>
    <string name="doctorvisit">Doctor Home Visit</string>
    <string name="nursevisit">Nurse Home Visit</string>
    <string name="searchvisit">Search by service </string>
    <string name="homevisit_title">Home Visit </string>
    <string name="patient_num">Patient Number </string>
    <string name="patient_address">Address:</string>
    <string name="text_tv">please tell us about your feedback</string>
    <string name="doctor_specialization">specialization</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="fee">Fees</string>


</resources>