<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Payment_for_call_Activity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirmreservation"
        android:textColor="#000000"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="101dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/calling" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/servicetype"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="70dp"
            android:text="@string/phonecall"
            android:textColor="#000000"
            android:textSize="20sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/patientname"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/patientname_callid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="5dp"
            android:inputType="text" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/phonenumber"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/patientmobile_callid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:inputType="number|phone" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/bookingdate"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="italic" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="5dp"
                android:inputType="time" />

    </LinearLayout>


    <EditText
        android:id="@+id/patientcode_callid"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:hint="Type your promo code..."
        android:inputType="number" />


    <Button
        android:id="@+id/payvisacall_btn"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#DA680F98"
        android:text="@string/payment"
        android:textSize="15sp" />







</LinearLayout>