<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup_Activity">


    <ImageView
        android:layout_width="152dp"
        android:layout_height="128dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="200dp"
        android:padding="10dp"
        android:src="@drawable/okey" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_process"
        android:textColor="@color/black"
        android:textSize="25sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/tv_process1"
        android:textColor="#534C4C"
        android:textSize="17sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/tv_process2"
        android:textColor="#534C4C"
        android:textSize="17sp" />


    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" />


</LinearLayout>