<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".logoActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="382dp"
        app:srcCompat="@drawable/khaledd" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="56dp"
        android:gravity="center_horizontal"
        android:text="@string/title1"
        android:textColor="#DA680F98"
        android:textSize="25sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-50dp"
        android:inputType="text"
        android:text="@string/title2"
        android:textColor="#130303"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/title3"
        android:textColor="#DA680F98"
        android:textSize="25sp" />

    <ProgressBar
        android:id="@+id/progressBar_logoid"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="398dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="20dp"
        android:indeterminate="true" />


</LinearLayout>