<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Doctor__or_nurse_Activity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:text="@string/selectservice"
        android:textColor="#000000"
        android:textSize="30sp" />


    <SearchView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="82dp"
            android:layout_height="57dp"
            android:src="@drawable/appointment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/doctorvisit"
            android:textColor="#4C4949"
            android:textSize="20sp"
            android:textStyle="normal" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="84dp"
            android:layout_height="57dp"
            android:src="@drawable/nurse"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/nursevisit"
            android:textColor="#706868"
            android:textSize="20sp" />


    </LinearLayout>




</LinearLayout>